--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.2.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +41,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5.3.3"
+    }
   }
 }
